--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,15 @@ uuid = "b29caa31-27d5-5c34-88cc-b1476f7df19a"
 authors = ["Allen Hill <allenofthehills@gmail.com>"]
 version = "0.1.0"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
+[deps]
+Biomechanics = "6f07b801-2c6f-57cd-b605-0571f3a6b84e"
+ChaosTools = "608a59af-f2a3-5ad4-90b4-758bdf3122a7"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+UnsafeArrays = "c4a57d5a-5b31-53a6-b365-19f8c011fbd6"
